--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -1,17 +1,17 @@
-.todolist {
-     display:flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: left;
-     font-size: 2rem;
-     color: rgba(23, 5, 58, 0.8);
-     .input {
-          color: rgba(23, 19, 151, 0.7);
-          display: inline-block;
-          margin:1rem;
-          border: 0;
-          background-color: rgb(240,245,254);
-          font-size: 2.5rem;
-          height:3.5rem
-     }
-}
+// .todolist {
+//      display:flex;
+//      flex-direction: row;
+//      justify-content: center;
+//      align-items: left;
+//      font-size: 2rem;
+//      color: rgba(23, 5, 58, 0.8);
+//      .input {
+//           color: rgba(23, 19, 151, 0.7);
+//           display: inline-block;
+//           margin:1rem;
+//           border: 0;
+//           background-color: rgb(240,245,254);
+//           font-size: 2.5rem;
+//           height:3.5rem
+//      }
+// }
