--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
-body {
+/* body {
      margin: 0;
      height: 100vh;
      display:flex;
-     flex-direction: column;
+     flex-direction: row;
      justify-content: center;
      align-items: center;
-}
+} */
