--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
+.App {
+  text-align: center;
+  font-family: 'bradley hand' ;
+  background-color: #edd8c3;
+  background-color: rgba( 224,175,155,0.7);
+  background-color: #ff5500;
+}
 
-   @media (prefers-reduced-motion: no-preference) {
-     .App-logo {
-       animation: App-logo-spin infinite 20s linear;
-     }
-   }
    
    .App-header {
      background-color: #282c34;
@@ -16,15 +18,4 @@
      color: white;
    }
    
-   .App-link {
-     color: #61dafb;
-   }
-   
-   @keyframes App-logo-spin {
-     from {
-       transform: rotate(0deg);
-     }
-     to {
-       transform: rotate(360deg);
-     }
-   }
+  
